# IdentifyCardNumberRecognition

./: BlurDectection.hpp  BlurDetection.hpp  CMakeLists.txt  Camshift.hpp  ChannelProcess.hpp  ColorBalance.hpp  GetCardMat.hpp  Init.hpp  LICENSE.txt  README  ReadWriteFile.cpp  SurfMatcher.hpp  TestFile.hpp  camshift.cpp  camshift.hpp  main.cpp  surfMatcher.hpp  surf_matcher.cpp
tessdata/: eng.traineddata  kaiu_eng.traineddata
test/: inputTest.txt  outputTest.txt
